Done with header basics

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
           <h1 class="banner-heading">Mary Hardy</h1>
 
-          <p>
+          <p class="banner-desc">
             Shot what able cold new see hold.Friendly as an betrayed formerly
             he. Morning because as to society behaved moments.
           </p>
@@ -44,7 +44,9 @@
       </div>
     </header>
 
-    <main></main>
+    <main>
+        
+    </main>
 
     <footer></footer>
   </body>
