--- a/index.html
+++ b/index.html
@@ -37,15 +37,27 @@
           <button class="btn-primary">Download CV</button>
 
           <button class="btn-primary">Contact</button>
-
         </div>
 
-        <img class="ProfilePicture" src="/images/hardy.png" alt="Picture of Hardy Bhai">
+        <img
+          class="ProfilePicture"
+          src="/images/hardy.png"
+          alt="Picture of Hardy Bhai"
+        />
       </div>
     </header>
 
     <main>
-        
+      <section class="about">
+        <h3 class="section-title">About Me</h3>
+        <p class="section-description">
+          I, m a designer & developer with a passion for web design. I enjoy
+          developing simple, clean and slick websites that provide real value to
+          the end user. Thousands of clients have procured exceptional resulfs
+          while working with me. Delivering work within time and budget which
+          meets clients requirements in our mata.
+        </p>
+      </section>
     </main>
 
     <footer></footer>
