--- a/index.html
+++ b/index.html
@@ -57,6 +57,24 @@
           while working with me. Delivering work within time and budget which
           meets clients requirements in our mata.
         </p>
+        <div class="about-info-container">     <!--  .about-info*4>h4.info-title+p.info-description  -->
+            <div class="about-info">
+                <h4 class="info-title">Name: </h4>
+                <p class="info-description">Mary Hardy</p>
+            </div>
+            <div class="about-info">
+                <h4 class="info-title">Email: </h4>
+                <p class="info-description">info@gmail.com</p>
+            </div>
+            <div class="about-info">
+                <h4 class="info-title">Date of Birth: </h4>
+                <p class="info-description">11 November 1987</p>
+            </div>
+            <div class="about-info">
+                <h4 class="info-title">From: </h4>
+                <p class="info-description">Los Angeles, CA, USA</p>
+            </div>
+        </div>
       </section>
     </main>
 
