--- a/index.html
+++ b/index.html
@@ -57,22 +57,56 @@
           while working with me. Delivering work within time and budget which
           meets clients requirements in our mata.
         </p>
-        <div class="about-info-container">     <!--  .about-info*4>h4.info-title+p.info-description  -->
-            <div class="about-info">
-                <h4 class="info-title">Name: </h4>
-                <p class="info-description">Mary Hardy</p>
+        <div class="about-info-container">
+          <!--  .about-info*4>h4.info-title+p.info-description  -->
+          <div class="about-info">
+            <h4 class="info-title">Name:</h4>
+            <p class="info-description">Mary Hardy</p>
+          </div>
+          <div class="about-info">
+            <h4 class="info-title">Email:</h4>
+            <p class="info-description">info@gmail.com</p>
+          </div>
+          <div class="about-info">
+            <h4 class="info-title">Date of Birth:</h4>
+            <p class="info-description">11 November 1987</p>
+          </div>
+          <div class="about-info">
+            <h4 class="info-title">From:</h4>
+            <p class="info-description">Los Angeles, CA, USA</p>
+          </div>
+        </div>
+      </section>
+
+      <!--Start of What I do section-->
+      <section>
+        <h3 class="section-title">What I do</h3>
+        <p id="whatIdoDesc" class="section-description">
+          I have more than 10 years experience building software for clients all
+          over the world. Below is a quick overview of my main technical skill
+          sets and technologies i use. Want to find out more about my
+          experience? Check out my online resume and project portfolio.
+        </p>
+        <div class="skills-container">
+            <div class="skill">      <!-- .skill*4>img+h3.skill-title+p.skill-description -->
+                <img src="/images/icons/js.png" alt="Javascript Logo">
+                <h3 class="skill-title">Vanilla Javascript</h3>
+                <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
             </div>
-            <div class="about-info">
-                <h4 class="info-title">Email: </h4>
-                <p class="info-description">info@gmail.com</p>
+            <div class="skill">
+                <img src="/images/icons/react.png" alt="React Logo">
+                <h3 class="skill-title">React</h3>
+                <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
             </div>
-            <div class="about-info">
-                <h4 class="info-title">Date of Birth: </h4>
-                <p class="info-description">11 November 1987</p>
+            <div class="skill">
+                <img src="/images/icons/nodejs.png" alt="NodeJS Logo">
+                <h3 class="skill-title">Node.js</h3>
+                <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
             </div>
-            <div class="about-info">
-                <h4 class="info-title">From: </h4>
-                <p class="info-description">Los Angeles, CA, USA</p>
+            <div class="skill">
+                <img src="/images/icons/mongo.png" alt="MongoDB logo">
+                <h3 class="skill-title">MongoDB</h3>
+                <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
             </div>
         </div>
       </section>
