--- a/index.html
+++ b/index.html
@@ -167,6 +167,10 @@
             </div>
         </div>
 
+        <div class="download-cv">
+            <button class="btn-primary">Download CV</button>
+        </div>
+
       </section>
     </main>
 
