--- a/index.html
+++ b/index.html
@@ -88,26 +88,43 @@
           experience? Check out my online resume and project portfolio.
         </p>
         <div class="skills-container">
-            <div class="skill">      <!-- .skill*4>img+h3.skill-title+p.skill-description -->
-                <img src="/images/icons/js.png" alt="Javascript Logo">
-                <h3 class="skill-title">Vanilla Javascript</h3>
-                <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
-            </div>
-            <div class="skill">
-                <img src="/images/icons/react.png" alt="React Logo">
-                <h3 class="skill-title">React</h3>
-                <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
-            </div>
-            <div class="skill">
-                <img src="/images/icons/nodejs.png" alt="NodeJS Logo">
-                <h3 class="skill-title">Node.js</h3>
-                <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
-            </div>
-            <div class="skill">
-                <img src="/images/icons/mongo.png" alt="MongoDB logo">
-                <h3 class="skill-title">MongoDB</h3>
-                <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
-            </div>
+          <div class="skill">
+            <!-- .skill*4>img+h3.skill-title+p.skill-description -->
+            <img src="/images/icons/js.png" alt="Javascript Logo" />
+            <h3 class="skill-title">Vanilla Javascript</h3>
+            <p class="skill-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="skill">
+            <img src="/images/icons/react.png" alt="React Logo" />
+            <h3 class="skill-title">React</h3>
+            <p class="skill-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="skill">
+            <img src="/images/icons/nodejs.png" alt="NodeJS Logo" />
+            <h3 class="skill-title">Node.js</h3>
+            <p class="skill-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="skill">
+            <img src="/images/icons/mongo.png" alt="MongoDB logo" />
+            <h3 class="skill-title">MongoDB</h3>
+            <p class="skill-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
         </div>
       </section>
 
@@ -116,64 +133,104 @@
         <h3 class="section-title">A summary of My Resume</h3>
 
         <div class="resume-container">
-            <div class="resume-column">
-                <h3 class="resume-column-title">My Education</h3>
+          <div class="resume-column">
+            <h3 class="resume-column-title">My Education</h3>
 
-                <div class="resume-item">
-                    <h2 class="resume-item-title">Master in Computer Engineering</h2>
-                    <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
-                    <p class="resume-item-description">List skill/technologies here. You can change the icon above 
-                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
-                </div>
-                <hr>
-                <div class="resume-item">
-                    <h2 class="resume-item-title">Master in Computer Engineering</h2>
-                    <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
-                    <p class="resume-item-description">List skill/technologies here. You can change the icon above 
-                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
-                </div>
-                <hr>
-                <div class="resume-item">
-                    <h2 class="resume-item-title">Master in Computer Engineering</h2>
-                    <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
-                    <p class="resume-item-description">List skill/technologies here. You can change the icon above 
-                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
-                </div>
-
+            <div class="resume-item">
+              <h2 class="resume-item-title">Master in Computer Engineering</h2>
+              <h3 class="resume-item-institute">
+                Harvard University / 2015 - 2017
+              </h3>
+              <p class="resume-item-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
             </div>
-            <div class="resume-column">
-                <h3 class="resume-column-title">My Experience</h3>
-
-                <div class="resume-item">
-                    <h2 class="resume-item-title">Sr. Font End Developer</h2>
-                    <h3 class="resume-item-institute">Apple Inc / 2020 - Current</h3>
-                    <p class="resume-item-description">List skill/technologies here. You can change the icon above 
-                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
-                </div>
-                <hr>
-                <div class="resume-item">
-                    <h2 class="resume-item-title">Jr. Font End Developer</h2>
-                    <h3 class="resume-item-institute">Dribbble Inc / 2018 - 2022</h3>
-                    <p class="resume-item-description">List skill/technologies here. You can change the icon above 
-                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
-                </div>
-                <hr>
-                <div class="resume-item">
-                    <h2 class="resume-item-title">HTML Developer</h2>
-                    <h3 class="resume-item-institute">Adobe Inc / 2017 - 2018</h3>
-                    <p class="resume-item-description">List skill/technologies here. You can change the icon above 
-                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
-                </div>
+            <hr />
+            <div class="resume-item">
+              <h2 class="resume-item-title">Master in Computer Engineering</h2>
+              <h3 class="resume-item-institute">
+                Harvard University / 2015 - 2017
+              </h3>
+              <p class="resume-item-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
             </div>
+            <hr />
+            <div class="resume-item">
+              <h2 class="resume-item-title">Master in Computer Engineering</h2>
+              <h3 class="resume-item-institute">
+                Harvard University / 2015 - 2017
+              </h3>
+              <p class="resume-item-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+          </div>
+          <div class="resume-column">
+            <h3 class="resume-column-title">My Experience</h3>
+
+            <div class="resume-item">
+              <h2 class="resume-item-title">Sr. Font End Developer</h2>
+              <h3 class="resume-item-institute">Apple Inc / 2020 - Current</h3>
+              <p class="resume-item-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr />
+            <div class="resume-item">
+              <h2 class="resume-item-title">Jr. Font End Developer</h2>
+              <h3 class="resume-item-institute">Dribbble Inc / 2018 - 2022</h3>
+              <p class="resume-item-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr />
+            <div class="resume-item">
+              <h2 class="resume-item-title">HTML Developer</h2>
+              <h3 class="resume-item-institute">Adobe Inc / 2017 - 2018</h3>
+              <p class="resume-item-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+          </div>
         </div>
 
         <div class="download-cv">
-            <button class="btn-primary">Download CV</button>
+          <button class="btn-primary">Download CV</button>
         </div>
-
       </section>
     </main>
 
-    <footer></footer>
+    <footer>
+      <div class="footer-column-contaner">
+        <div class="footer-column">
+          <h3 class="section-title">Let's Connect</h3>
+          <p class="section-description">
+            Please fill out the form on this section to contact with me or call
+            between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
+          </p>
+          <div class="social-links">
+            <a href=""><img src="images/icons/facebook.png" alt="facebook icon"></a>
+            <a href=""><img src="images/icons/twitter.png" alt="twitter icon"></a>
+            <a href=""><img src="images/icons/insta.png" alt="instagram icon"></a>
+          </div>
+        </div>
+        <div class="footer-column">
+          <h3 class="section-title">Message Me!</h3>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
