--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
     </main>
 
     <footer>
-      <div class="footer-column-contaner">
+      <div class="footer-column-container">
         <div class="footer-column">
           <h3 class="section-title">Let's Connect</h3>
           <p class="section-description">
@@ -229,6 +229,12 @@
         </div>
         <div class="footer-column">
           <h3 class="section-title">Message Me!</h3>
+          <form class="contact" action="">
+            <input type="text" placeholder="Your name">
+            <input type="email" placeholder="Your Email">
+            <textarea name="" placeholder="Message" id="" cols="20" rows="6"></textarea>
+            <input class="btn-primary" id="submit-btn" type="submit" value="Submit">
+          </form>
         </div>
       </div>
     </footer>
