Checking if hardy's picture works

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         <img
           class="ProfilePicture"
-          src="/images/hardy.png"
+          src="./images/hardy.png"
           alt="Picture of Hardy Bhai"
         />
       </div>
