All pictures should be fixed!

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="skills-container">
           <div class="skill">
             <!-- .skill*4>img+h3.skill-title+p.skill-description -->
-            <img src="/images/icons/js.png" alt="Javascript Logo" />
+            <img src="./images/icons/js.png" alt="Javascript Logo" />
             <h3 class="skill-title">Vanilla Javascript</h3>
             <p class="skill-description">
               List skill/technologies here. You can change the icon above to any
@@ -108,7 +108,7 @@
             </p>
           </div>
           <div class="skill">
-            <img src="/images/icons/nodejs.png" alt="NodeJS Logo" />
+            <img src="./images/icons/nodejs.png" alt="NodeJS Logo" />
             <h3 class="skill-title">Node.js</h3>
             <p class="skill-description">
               List skill/technologies here. You can change the icon above to any
@@ -117,7 +117,7 @@
             </p>
           </div>
           <div class="skill">
-            <img src="/images/icons/mongo.png" alt="MongoDB logo" />
+            <img src="./images/icons/mongo.png" alt="MongoDB logo" />
             <h3 class="skill-title">MongoDB</h3>
             <p class="skill-description">
               List skill/technologies here. You can change the icon above to any
@@ -222,9 +222,9 @@
             between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
           </p>
           <div class="social-links">
-            <a href=""><img src="images/icons/facebook.png" alt="facebook icon"></a>
-            <a href=""><img src="images/icons/twitter.png" alt="twitter icon"></a>
-            <a href=""><img src="images/icons/insta.png" alt="instagram icon"></a>
+            <a href=""><img src="./images/icons/facebook.png" alt="facebook icon"></a>
+            <a href=""><img src="./images/icons/twitter.png" alt="twitter icon"></a>
+            <a href=""><img src="./images/icons/insta.png" alt="instagram icon"></a>
           </div>
         </div>
         <div class="footer-column">
