--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles/portfolio.css" />
+    <script src="https://kit.fontawesome.com/a9b01d082b.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <header class="header">
@@ -34,9 +35,9 @@
             he. Morning because as to society behaved moments.
           </p>
 
-          <button class="btn-primary">Download CV</button>
+          <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
 
-          <button class="btn-primary">Contact</button>
+          <button class="btn-primary"><i class="fa-solid fa-phone"></i> Contact</button>
         </div>
 
         <img
@@ -208,7 +209,7 @@
         </div>
 
         <div class="download-cv">
-          <button class="btn-primary">Download CV</button>
+          <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
         </div>
       </section>
     </main>
